[package]
name = "indirect-once-derive"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1", features = ["full"] }
quote = "^1"
proc-macro2 = "^1"
proc-macro-error = "^1"

parking_lot = { version = "^0", optional = true }
