[package]
name = "indirect-once-derive"
description = "One-time resolvable runtime indirection in the style of glibc's ifunc"
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/toshokan/indirect-once"
documentation = "https://docs.rs/indirect-once"
readme = "../README.md"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1", features = ["full"] }
quote = "^1"
proc-macro2 = "^1"
proc-macro-error = "^1"

parking_lot = { version = "^0", optional = true }
