[package]
name = "indirect-once"
description = "One-time resolvable runtime indirection in the style of glibc's ifunc"
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/toshokan/indirect-once"
documentation = "https://docs.rs/indirect-once"
readme = "../README.md"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[features]
default = ["parking-lot", "proc-macro"]
parking-lot = ["parking_lot", "indirect-once-derive/parking_lot"]
proc-macro = ["indirect-once-derive"]

[dependencies]
indirect-once-derive = { version = "0.1.1", path = "../indirect-once-derive", optional = true }
parking_lot = { version = "^0", optional = true }
